--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test-w": "dotenv -e .env.test -- vitest",
     "db-gen": "drizzle-kit generate",
     "db-mig": "drizzle-kit migrate",
-    "db-std": "drizzle-kit studio"
+    "db-std": "drizzle-kit studio",
+    "test-mig": "dotenv -e .env.test -- drizzle-kit migrate",
+    "pretest": "pnpm run test-mig",
+    "pretest-w": "pnpm run test-mig"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +25,7 @@
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "^0.40.0",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
@@ -31,6 +35,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@faker-js/faker": "^9.6.0",
     "@types/node": "^22.13.10",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.30.5",
