Improved docker compose

--- a/.env.test
+++ b/.env.test
@@ -7,3 +7,9 @@ CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_ACCESS_KEY_ID=
 CLOUDFLARE_SECRET_ACCESS_KEY=
 CLOUDFLARE_PUBLIC_URL=https://test.com
+
+# DB
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_DB=""
+POSTGRES_PORT=""
