--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,44 @@
 services:
   pg:
     image: bitnami/postgresql:latest
+    container_name: postgres
+    restart: unless-stopped
     ports:
-      - '5432:5432'
+      - $POSTGRES_PORT:$POSTGRES_PORT
     environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=admin123
-      - POSTGRES_DB=upload
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
     volumes:
       - './docker:/docker-entrypoint-initdb.d'
+    networks:
+      - widget
+      - db
+
+  app:
+    build: .
+    container_name: widget-api
+    restart: unless-stopped
+    ports:
+      - $PORT:$PORT
+    environment:
+      - CLOUDFLARE_BUCKET=$CLOUDFLARE_BUCKET
+      - CLOUDFLARE_ACCOUNT_ID=$CLOUDFLARE_ACCOUNT_ID
+      - CLOUDFLARE_ACCESS_KEY_ID=$CLOUDFLARE_ACCESS_KEY_ID
+      - CLOUDFLARE_SECRET_ACCESS_KEY=$CLOUDFLARE_SECRET_ACCESS_KEY
+      - CLOUDFLARE_PUBLIC_URL=$CLOUDFLARE_PUBLIC_URL
+      - NODE_ENV=$NODE_ENV
+      - DATABASE_URL=$DATABASE_URL
+    networks:
+      - widget
+    depends_on:
+      - pg
+
+volumes:
+  pg:
+
+networks:
+  widget:
+    driver: bridge
+  db:
+    driver: bridge
